--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.0",
-    "mcp-handler": "^1.0.2",
+    "mcp-handler": "0.0.0-26e55319-20251013185604",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
